--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<html>
-    
-</html>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Simple Snake Game</title>
+	
+	<!-- Basic styling, centering of the canvas. -->
+	<style>
+	canvas {
+		display: block;
+		position: absolute;
+		border: 1px solid #000;
+		margin: auto;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+	}
+	</style>
+</head>
+<body>
