--- a/index.html
+++ b/index.html
@@ -19,3 +19,23 @@
 	</style>
 </head>
 <body>
+<script>
+    
+var
+/**
+* Constats
+ */
+COLS = 26,
+ROWS = 26,
+EMPTY = 0,
+SNAKE = 1,
+FRUIT = 2,
+LEFT  = 0,
+UP    = 1,
+RIGHT = 2,
+DOWN  = 3,
+KEY_LEFT  = 37,
+KEY_UP    = 38,
+KEY_RIGHT = 39,
+KEY_DOWN  = 40,
+                
