changed title name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Simple Snake Game</title>
+	<title>Game of Snakes</title>
 	
 	<!-- Basic styling, centering of the canvas. -->
 	<style>
@@ -20,7 +20,7 @@
 </head>
 <body>
 <script>
-    
+
 var
 /**
 * Constats
