--- a/index.html
+++ b/index.html
@@ -39,3 +39,11 @@ KEY_UP    = 38,
 KEY_RIGHT = 39,
 KEY_DOWN  = 40,
                 
+/**
+ * Game objects
+ */
+ canvas,	  /* HTMLCanvas */
+ctx,	  /* CanvasRenderingContext2d */
+keystate, /* Object, used for keyboard inputs */
+frames,   /* number, used for animation */
+score;	  /* number, keep track of the player score */
