--- a/index.html
+++ b/index.html
@@ -47,3 +47,11 @@ ctx,	  /* CanvasRenderingContext2d */
 keystate, /* Object, used for keyboard inputs */
 frames,   /* number, used for animation */
 score;	  /* number, keep track of the player score */
+
+/**
+ * Grid datastructor, usefull in games where the game world is
+ * confined in absolute sized chunks of data or information.
+ * 
+ * @type {Object}
+ */
+ grid = {
