--- a/index.html
+++ b/index.html
@@ -55,3 +55,7 @@ score;	  /* number, keep track of the player score */
  * @type {Object}
  */
  grid = {
+
+    width: null,  /* number, the number of columns */
+	height: null, /* number, the number of rows */
+	_grid: null,  /* Array<any>, data representation */
