--- a/index.html
+++ b/index.html
@@ -59,3 +59,10 @@ score;	  /* number, keep track of the player score */
     width: null,  /* number, the number of columns */
 	height: null, /* number, the number of rows */
 	_grid: null,  /* Array<any>, data representation */
+
+    /**
+	 * Initiate and fill a c x r grid with the value of d
+	 * @param  {any}    d default value to fill with
+	 * @param  {number} c number of columns
+	 * @param  {number} r number of rows
+	 */
