--- a/index.html
+++ b/index.html
@@ -66,3 +66,14 @@ score;	  /* number, keep track of the player score */
 	 * @param  {number} c number of columns
 	 * @param  {number} r number of rows
 	 */
+     init: function(d, c, r) {
+		this.width = c;
+		this.height = r;
+		this._grid = [];
+		for (var x=0; x < c; x++) {
+			this._grid.push([]);
+			for (var y=0; y < r; y++) {
+				this._grid[x].push(d);
+			}
+		}
+	},
