--- a/index.html
+++ b/index.html
@@ -101,3 +101,10 @@ score;	  /* number, keep track of the player score */
 	}
 }
 
+/**
+ * The snake, works as a queue (FIFO, first in first out) of data
+ * with all the current positions in the grid with the snake id
+ * 
+ * @type {Object}
+ */
+ snake = {
