set food item for snake

--- a/index.html
+++ b/index.html
@@ -148,3 +148,21 @@ score;	  /* number, keep track of the player score */
 		return this._queue.pop();
 	}
 };
+
+/**
+ * Set a food id at a random free cell in the grid
+ */
+ function setFood() {
+	var empty = [];
+	// iterate through the grid and find all empty cells
+	for (var x=0; x < grid.width; x++) {
+		for (var y=0; y < grid.height; y++) {
+			if (grid.get(x, y) === EMPTY) {
+				empty.push({x:x, y:y});
+			}
+		}
+	}
+	// chooses a random cell
+	var randpos = empty[Math.round(Math.random()*(empty.length - 1))];
+	grid.set(FRUIT, randpos.x, randpos.y);
+}
