--- a/index.html
+++ b/index.html
@@ -216,3 +216,69 @@ score;	  /* number, keep track of the player score */
 	// first. Runs about 60 frames a second
 	window.requestAnimationFrame(loop, canvas);
 }
+
+
+/**
+ * Updates the game logic
+ */
+ function update() {
+	frames++;
+	// changing direction of the snake depending on which keys
+	// that are pressed
+	if (keystate[KEY_LEFT] && snake.direction !== RIGHT) {
+		snake.direction = LEFT;
+	}
+	if (keystate[KEY_UP] && snake.direction !== DOWN) {
+		snake.direction = UP;
+	}
+	if (keystate[KEY_RIGHT] && snake.direction !== LEFT) {
+		snake.direction = RIGHT;
+	}
+	if (keystate[KEY_DOWN] && snake.direction !== UP) {
+		snake.direction = DOWN;
+	}
+	// each five frames update the game state.
+	if (frames%5 === 0) {
+		// pop the last element from the snake queue i.e. the
+		// head
+		var nx = snake.last.x;
+		var ny = snake.last.y;
+		// updates the position depending on the snake direction
+		switch (snake.direction) {
+			case LEFT:
+				nx--;
+				break;
+			case UP:
+				ny--;
+				break;
+			case RIGHT:
+				nx++;
+				break;
+			case DOWN:
+				ny++;
+				break;
+		}
+		// checks all gameover conditions
+		if (0 > nx || nx > grid.width-1  ||
+			0 > ny || ny > grid.height-1 ||
+			grid.get(nx, ny) === SNAKE
+		) {
+			return init();
+		}
+		// check wheter the new position are on the fruit item
+		if (grid.get(nx, ny) === FRUIT) {
+			// increment the score and sets a new fruit position
+			score++;
+			setFood();
+		} else {
+			// take out the first item from the snake queue i.e
+			// the tail and remove id from grid
+			var tail = snake.remove();
+			grid.set(EMPTY, tail.x, tail.y);
+		}
+		// add a snake id at the new position and append it to 
+		// the snake queue
+		grid.set(SNAKE, nx, ny);
+		snake.insert(nx, ny);
+	}
+}
