--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Game of Snakes</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
 	<!-- Basic styling, centering of the canvas. -->
 	<style>
