--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 	</style>
 </head>
 <body>
-	<div>This text is the actual content of the box.</div>
+	<div>
+		<h2><b><u>How to Play</u></b></h2>
+		<br>
+		<p><b>Control the snake using the arrow keys; chase down the dots. 
+		<br>
+		<p><b>Play until your snake hits the wall. 
+		<br>
+		<p><b>Game will automatically restart once you hit a wall or hit yourself.</b></p>
+		<br>
+		<p><b>ENJOY</b></p>
+	</div>
 <script>
 
 var
