--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	</style>
 </head>
 <body>
-	<div>
+	<div class="divbox">
 		<h2><b><u>How to Play</u></b></h2>
 		<br>
-		<p><b>Control the snake using the arrow keys; chase down the dots. 
+		<p><b>Control the snake using the arrow keys; chase down the dots. (←, ↑, →, ↓)</b></p>
 		<br>
-		<p><b>Play until your snake hits the wall. 
+		<p><b>Play until your snake hits the wall.</b></p>
 		<br>
 		<p><b>Game will automatically restart once you hit a wall or hit yourself.</b></p>
 		<br>
